--- a/src/form.html
+++ b/src/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тест</title>
+    <title>Тест:форма</title>
     <meta name="description" content="lorem ipsum" />
     <link rel="stylesheet" href="css/form.css" />
 </head>
@@ -19,15 +19,7 @@
                <div class="check" id="check"> 
                 
                </div>
-                          <!--    <label for="select">Оцените свой город от 1 до 5:</label>
-                        <select id="select" name="select">
-                         <option value="1">1</option>
-                         <option value="2">2</option>
-                         <option value="3">3</option>
-                         <option value="4">4</option>
-                         <option value="5">5</option>
-                        </select>-->
-                    
+
                     <div class="name">
                         <label class="label" for="name">Введите имя:</label>
                         <input class= "input" type="text" id="name" name="name" placeholder="Иван"> 
