--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,9 +16,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-4 block block_green"></div>
-            <div class="col-4 block_dashed block_red"></div>
-            <div class="col-4 block block_black"></div>
+            <div class="col-4 block block_left"></div>
+            <div class="col-4 block block_middle"></div>
+            <div class="col-4 block block_right"></div>
         </div>
         <div class="row">
             <div class="col-4  block">
@@ -28,13 +28,12 @@
                 <button id="secondBtn" type="button" class="btn btn-success">Кнопка 2</button>
             </div>
         </div>
-
         <a href="form.html">Перейти к страницу с формой</a>
-        <div class="modal show" tabindex="-1">
+        <div class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Привет мир</h5>
+                        <div class="modal-title">Привет мир</div>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                 </div>
@@ -42,13 +41,7 @@
         </div>
     </div>
   
-
-
-
-
-  <!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>-->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="js/script.js"> </script>
-    
 </body>
 </html>
