change blocks by order

--- a/src/form.html
+++ b/src/form.html
@@ -73,7 +73,7 @@
         </form>
         <div class="answer">Ответ:</div>
         <div id="result" class="result"></div>
-        <a href="/src/index.html" class="link">Вернуться к главной</a>
+        <a href="index.html" class="link">Вернуться к главной</a>
     </div>
     <script src="js/fetch.js"></script>
 </body>
