--- a/src/form.html
+++ b/src/form.html
@@ -22,7 +22,7 @@
                 </select>
             </div>
             <div class="dropdown">
-                <label for="select2">Как вы оцените состояние автомобильных дорог в Вашем городе:</label>
+                <label for="select2">Как Вы оцените состояние автомобильных дорог в Вашем городе:</label>
                 <select id="select2" name="select2">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -32,7 +32,7 @@
                 </select>
             </div>
             <div class="dropdown">
-                <label for="select3">Как вы оцениваете работу здравоохранения:</label>
+                <label for="select3">Как Вы оцениваете работу здравоохранения:</label>
                 <select id="select3" name="select3">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -51,7 +51,7 @@
                     <option value="5">5</option>
                 </select>
             </div>
-            <div class="dropdown"> <label for="select5">Как вы оцениваете имеющиеся условия для занятий физической
+            <div class="dropdown"> <label for="select5">Как Вы оцениваете имеющиеся условия для занятий физической
                     культурой и спортом:</label>
                 <select id="select5" name="select5">
                     <option value="1">1</option>
