--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-4 block block_left" style="order: 1"></div>
-            <div class="col-4 block block_middle" style="order: 2"></div>
+            <div class="col-4 block block_left"></div>
+            <div class="col-4 block block_middle"></div>
             <div class="col-4 block block_right"></div>
         </div>
         <div class="row">
